@@ -1,2 +1,5 @@
 bin_SCRIPTS=generate_ncvars.py f90_dependencies.py glimmer_profile.py glide_launch.py
 EXTRA_DIST = $(bin_SCRIPTS)
+sge_DATA =  qsub_glide.sh
+sgedir = $(pkgdatadir)
+dist_sge_DATA = $(sge_DATA)
